# entityscope

./: Cargo.toml  README.md
.github/workflows/: rust.yml
entity-scope-explorer/: Cargo.toml
entity-scope-generator/: Cargo.toml
entity-scope-generator/src/: lib.rs  main.rs
entity-twin-runtime/: Cargo.toml
entityscope/: Cargo.toml
entityscope/src/: lib.rs
