[package]
name = "entity-scope-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "entityscope"
path = "src/main.rs"

[lib]
name = "entity_scope_generator"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
clap = { version = "4.5", features = ["derive"] }
